[tool.poetry]
name = "blaise_export_reporting_tool"
version = "0.1.0"
description = ""
authors = ["Matthew Palmer <38406765+matthewandrewpalmer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
Flask = "^2.0.0"
google-cloud-datastore = "^2.1.2"
mysql-connector-python = "^8.0.25"
requests = "^2.25.1"
functions-framework = "^2.2.0"
numpy = "^1.20.3"
pandas = "^1.2.4"
google-cloud = "^0.34.0"
google-cloud-storage = "^1.40.0"
python-dotenv = "^0.18.0"
requests-mock = "^1.9.3"
google-cloud-tasks = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
black = "^22.1.0"
pytest-cov = "^2.12.0"
pytest-flask = "^1.2.0"
pytest-mock = "^3.6.1"
pytest-lazy-fixture = "^0.6.3"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.942"
types-requests = "^2.28.7"
types-python-dateutil = "^2.8.19"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"
